# vaultrs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  flake.nix  typos.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  publish.yml  typos.yml  validate.yml
nix/automation/: configs.nix  devshells.nix
nix/lib/: toolchains.nix
src/: api.rs  auth.rs  aws.rs  client.rs  consul.rs  cubbyhole.rs  database.rs  entity.rs  entity_alias.rs  enums.rs  error.rs  identity.rs  identity_alias.rs  kv.rs  kv1.rs  kv2.rs  lib.rs  login.rs  pki.rs  rabbitmq.rs  ssh.rs  sys.rs  token.rs  totp.rs  transit.rs
src/api/: auth.rs  endpoint.rs  identity.rs  totp.rs  transit.rs
src/api/auth/approle/: requests.rs  responses.rs
src/api/auth/aws/: requests.rs  responses.rs
src/api/auth/cert/: requests.rs
src/api/auth/identity/: requests.rs  responses.rs
src/api/auth/kubernetes/: requests.rs  responses.rs
src/api/auth/ldap/: requests.rs  responses.rs
src/api/auth/oidc/: requests.rs  responses.rs
src/api/auth/userpass/: requests.rs  responses.rs
src/api/aws/: requests.rs  responses.rs
src/api/consul/: requests.rs  responses.rs
src/api/cubbyhole/: requests.rs
src/api/database/: requests.rs  responses.rs
src/api/entity/: requests.rs  responses.rs
src/api/entity_alias/: requests.rs  responses.rs
src/api/identity/: oidc.rs  requests.rs  responses.rs
src/api/identity/entity/: requests.rs  responses.rs
src/api/identity/entity_alias/: requests.rs  responses.rs
src/api/identity/group/: requests.rs  responses.rs
src/api/identity/group_alias/: requests.rs  responses.rs
src/api/identity/identity_tokens/: requests.rs  responses.rs
src/api/identity/oidc/named_key/: requests.rs
src/api/identity/oidc/role/: requests.rs  responses.rs
src/api/identity/oidc/token/: requests.rs  responses.rs
src/api/identity/tokens/: requests.rs
src/api/identity_alias/: requests.rs  responses.rs
src/api/kv/: requests.rs  responses.rs
src/api/kv1/: requests.rs  responses.rs
src/api/kv2/: requests.rs  responses.rs
src/api/pki/: requests.rs  responses.rs
src/api/rabbitmq/: requests.rs  responses.rs
src/api/ssh/: requests.rs  responses.rs
src/api/sys/: requests.rs  responses.rs
src/api/token/: requests.rs  responses.rs
src/api/totp/: requests.rs  responses.rs
src/api/transit/: requests.rs  responses.rs
src/auth/: approle.rs  aws.rs  cert.rs  kubernetes.rs  ldap.rs  oidc.rs  userpass.rs
src/identity/: entity.rs  entity_alias.rs  group.rs  group_alias.rs  identity_tokens.rs  oidc.rs  tokens.rs
src/identity/oidc/: named_key.rs  role.rs  token.rs
src/login/: approle.rs  core.rs  method.rs  oidc.rs  userpass.rs
tests/: approle.rs  aws.rs  cert.rs  client.rs  common.rs  consul.rs  database.rs  entity.rs  env.rs  identity.rs  kubernetes.rs  kv.rs  kv1.rs  kv2.rs  ldap.rs  login.rs  oidc.rs  pki.rs  ssh.rs  sys.rs  token.rs  transit.rs  userpass.rs  vault_bind_mounts_container.rs  vault_prod_container.rs
tests/files/: csr.pem  id_rsa  root_ca.crt
tests/files/kubernetes/: ca.crt
vaultrs/: Cargo.toml
vaultrs-login/: Cargo.toml  README.md
vaultrs-login/src/: engines.rs  lib.rs  method.rs
vaultrs-login/src/engines/: approle.rs  aws.rs  oidc.rs  userpass.rs
vaultrs-login/tests/: common.rs  login.rs
vaultrs-test/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
vaultrs-test/src/: docker.rs  lib.rs  oidc.rs  vault.rs
vaultrs-tests/: Cargo.toml
vaultrs-tests/tests/api_tests/: approle.rs  aws.rs  cert.rs  client.rs  common.rs  cubbyhole.rs  database.rs  identity.rs  kubernetes.rs  kv1.rs  kv2.rs  login.rs  main.rs  oidc.rs  pki.rs  ssh.rs  sys.rs  token.rs  totp.rs  transit.rs  userpass.rs
vaultrs-tests/tests/api_tests/common/: images.rs  setup.rs
vaultrs-tests/tests/files/: ca.pem  id_rsa.pub
vaultrs-tests/tests/files/kubernetes/: ca.key
vaultrs/src/: client.rs  cubbyhole.rs  lib.rs  sys.rs  transit.rs
vaultrs/src/api/: auth.rs  transit.rs
vaultrs/src/api/auth/approle/: responses.rs
vaultrs/src/api/auth/aws/: responses.rs
vaultrs/src/api/auth/cert/: requests.rs  responses.rs
vaultrs/src/api/auth/oidc/: responses.rs
vaultrs/src/api/aws/: requests.rs
vaultrs/src/api/cubbyhole/: responses.rs
vaultrs/src/api/database/: requests.rs
vaultrs/src/api/identity/entity_alias/: requests.rs
vaultrs/src/api/kv1/: requests.rs
vaultrs/src/api/kv2/: requests.rs  responses.rs
vaultrs/src/api/pki/: requests.rs  responses.rs
vaultrs/src/api/token/: responses.rs
vaultrs/src/api/transit/: requests.rs  responses.rs
vaultrs/src/auth/: approle.rs  aws.rs  oidc.rs
vaultrs/src/identity/: entity.rs  group.rs  group_alias.rs
vaultrs_derive/: Cargo.toml
vaultrs_derive/src/: lib.rs
