[workspace]
resolver = "2"
members = [
   "vaultrs", "vaultrs-login", "vaultrs-tests"
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
repository = "https://github.com/jmgilman/vaultrs"

[workspace.dependencies]
aws-credential-types = { version = "1.1.5" }
aes-gcm = "0.10.3"
aes-kw = { version = "0.2.1", features = ["alloc"] }
async-trait = "0.1.68"
aws-sdk-iam = { version = "1.13" }
aws-sdk-sts = { version = "1.13" }
aws-sigv4 = { version = "1.1" }
aws-smithy-runtime-api = { version = "1.1.5" }
aws-types = { version = "1.1" }
base64 = { version = "0.21" } # TODO
chrono = "0.4.38"
data-encoding = "2.3.3"
derive_builder = "0.12.0" # TODO
http = "1"
rcgen = "0.13" # TODO
rand = "0.8.0" # TODO
rsa = "0.9.8"
serde_json = "1.0.94"
serde = { version = "1.0.158", features = ["derive"] }
serial_test = "1.0.0" # TODO
sha2 = "0.10.6"
tempfile = "3.10.1"
testcontainers-modules = { version = "0.14", features = ["localstack", "postgres"] } # TODO
testcontainers =  { version = "0.26", features = ["http_wait"] } # TODO
thiserror = "1.0.40" # TODO 
tiny_http = { version = "0.12.0" }
tokio-test = "0.4.2"
tokio = { version = "1.26.0" }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter", "fmt"] }
tracing = { version = "0.1.37",  default-features = false, features = ["log"] }
url = { version = "2.3.1", default-features = false }
vaultrs-login = { path = "../vaultrs-login", features = ["oidc", "aws"]}
vaultrs = { version = "0.7.3", path = ".." }
reqwest = { version = "0.12.2", default-features = false } # TODO
rustify = { version = "0.6.0", default-features = false }
rustify_derive = "0.5.2"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true
