[package]
name = "vaultrs-login"
version = "0.2.3"
description = "Adds login support for Vault clients from vaultrs."
readme = "README.md"
keywords = ["Vault", "API", "Client", "Hashicorp", "Login"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
aws = ["dep:aws-sigv4", "dep:aws-sdk-sts", "dep:aws-types", "dep:aws-credential-types", "dep:aws-smithy-runtime-api", "dep:base64", "dep:http", "dep:serde_json"]
oidc = ["dep:tiny_http", "dep:tokio"]

[dependencies]
async-trait.workspace = true
aws-credential-types = { workspace = true, optional = true }
aws-sdk-sts = { workspace = true, optional = true }
aws-sigv4 = { workspace = true, optional = true }
aws-smithy-runtime-api = { workspace = true, optional = true }
aws-types = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
http = { version = "0.2", optional = true }
serde_json = { workspace = true, optional = true }
serde.workspace = true
tiny_http = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing.workspace = true
url.workspace = true
vaultrs = { version = "0.7.3", path = ".." }

[dev-dependencies]
reqwest.workspace = true
tokio-test.workspace = true
tracing-test.workspace = true
