[package]
name = "vaultrs-login"
version = "0.2.3"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
description = "Adds login support for Vault clients from vaultrs."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmgilman/vaultrs"
keywords = ["Vault", "API", "Client", "Hashicorp", "Login"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
aws = ["aws-sdk-iam", "aws-sdk-sts", "aws-sigv4", "aws-types", "aws-credential-types", "aws-smithy-runtime-api", "base64", "http", "serde_json"]
oidc = ["tiny_http", "tokio"]

[dependencies]
async-trait = "0.1.68"
aws-credential-types = { version = "1.1.5", optional = true }
aws-sdk-iam = { version = "1.13", optional = true }
aws-sdk-sts = { version = "1.13", optional = true }
aws-sigv4 = { version = "1.1", optional = true }
aws-smithy-runtime-api = { version = "1.1.5", optional = true }
aws-types = { version = "1.1", optional = true }
base64 = { version = "0.21", optional = true }
http = { version = "0.2", optional = true }
serde = "1.0.158"
serde_json = { version = "1", optional = true }
tiny_http = { version = "0.12.0", optional = true }
tokio = { version = "1.26.0", optional = true }
tracing = "0.1.37"
url = "2.3.1"
vaultrs = { version = "0.7.4", path = ".." }

[dev-dependencies]
reqwest = "0.11.15"
tokio-test = "0.4.2"
tracing-test = "0.2.4"
