[package]
name = "vaultrs-tests"
version = "0.0.0"
description = "Integration tests for vaultrs and vaultrs login"
publish = false
authors.workspace = true 
edition.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
aws-credential-types.workspace = true
aes-gcm.workspace = true
aes-kw.workspace = true
aws-sdk-iam.workspace = true
aws-sdk-sts.workspace = true
aws-types.workspace = true
base64.workspace = true
chrono.workspace = true
data-encoding.workspace = true
env_logger.workspace = true
hmac.workspace = true
jwt.workspace = true
rcgen.workspace = true
reqwest = { workspace =  true, default-features = false }
rand.workspace = true
rsa.workspace = true
serde_json.workspace = true
serde.workspace = true
serial_test.workspace = true
sha2.workspace = true
tempfile.workspace = true
testcontainers-modules = { workspace =  true, features = ["localstack", "postgres"] }
testcontainers =  { workspace =  true, features = ["http_wait"] }
test-log = { workspace =  true, features = ["trace"] }
tokio = { workspace =  true, features = ["full"] }
tracing-subscriber = { workspace  = true, default-features = false, features = ["env-filter", "fmt"] }
tracing.workspace = true
vaultrs-login = { path = "../vaultrs-login", features = ["oidc", "aws"]}
vaultrs = { path = ".."}
